--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "preserveSymlinks": true,
-    "target": "ESNext",
+    "target": "es2019",
     "module": "ESNext",
     "moduleResolution": "Node",
     "lib": ["ESNext", "DOM"]
