--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "balance-crypto",
   "type": "module",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Get wallet balance for 300+ cryptos with a unified interface",
   "main": "dist/index.js",
   "files": [
@@ -19,6 +19,7 @@
     }
   },
   "scripts": {
+    "prebuild": "rm -rf dist",
     "prepare": "pnpm build",
     "build": "tsup src/index.ts --format esm --dts"
   },
@@ -37,8 +38,8 @@
     "chainlink",
     "dash"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "v1rtl <https://v1rtl.site>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/talentlessguy/money-in-my-wallet/issues"
   },
