--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "balance-crypto",
-  "version": "0.0.14",
+  "version": "0.0.15",
+  "type": "module",
   "description": "Get wallet balance for 300+ cryptos with a unified interface",
   "main": "dist/index.js",
   "files": [
@@ -44,8 +45,8 @@
   },
   "homepage": "https://github.com/talentlessguy/money-in-my-wallet#readme",
   "devDependencies": {
-    "tsup": "^4.8.11",
-    "typescript": "^4.2.3"
+    "tsup": "^4.10.1",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
