--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "include": ["src", "./example.ts"],
   "compilerOptions": {
-    "declaration": true,
+    "module": "ESNext",
+    "target": "ES2019",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "preserveSymlinks": true,
-    "target": "es2019",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
-    "lib": ["ESNext", "DOM"]
+    "isolatedModules": true,
+    "noEmit": true,
+    "lib": ["ES2019"],
+    "preserveSymlinks": true
   }
 }
