--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "noEmit": true,
-    "lib": ["ES2019"],
+    "lib": ["ES2019", "DOM"],
     "preserveSymlinks": true
   }
 }
