--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
   test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      ETHERSCAN_KEY: ${{ secrets.ETHERSCAN_KEY }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
