--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "balance-crypto",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Get wallet balance for 300+ cryptos with a unified interface",
   "main": "dist/index.js",
   "type": "module",
@@ -48,6 +48,7 @@
   },
   "homepage": "https://github.com/talentlessguy/money-in-my-wallet#readme",
   "devDependencies": {
+    "@tinyhttp/dotenv": "^1.3.0",
     "c8": "^7.7.2",
     "ts-node": "^9.1.1",
     "tsup": "^4.10.1",
@@ -55,6 +56,7 @@
     "uvu": "^0.5.1"
   },
   "dependencies": {
+    "erc20-balance": "^0.1.4",
     "fetch-h2": "^2.5.1"
   },
   "engines": {
