--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "lib": ["ES2019", "DOM"],
-    "preserveSymlinks": true
+    "preserveSymlinks": true,
+    "resolveJsonModule": true
   }
 }
