--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "balance-crypto",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Get wallet balance for 300+ cryptos with a unified interface",
   "main": "dist/index.js",
   "type": "module",
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/talentlessguy/money-in-my-wallet#readme",
   "devDependencies": {
     "@tinyhttp/dotenv": "^1.3.0",
+    "@types/node": "^15.3.0",
     "c8": "^7.7.2",
     "ts-node": "^9.1.1",
     "tsup": "^4.10.1",
