--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "balance-crypto",
-  "version": "0.2.14",
-  "description": "Get wallet balance for 300+ cryptos with a unified interface",
+  "version": "0.2.15",
+  "description": "Get wallet balance for 5.8K+ cryptocurrencies with a single function.",
   "type": "module",
   "files": [
     "dist"
@@ -38,24 +38,24 @@
   },
   "homepage": "https://github.com/talentlessguy/money-in-my-wallet#readme",
   "devDependencies": {
-    "@tinyhttp/dotenv": "^1.3.0",
-    "@types/node": "^16.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "c8": "^7.7.3",
-    "eslint": "^7.30.0",
+    "@tinyhttp/dotenv": "^2.0.1",
+    "@types/node": "^16.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "c8": "^7.8.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "node-fetch": "^2.6.1",
-    "ts-node": "^10.1.0",
-    "tsup": "^4.12.5",
-    "typescript": "^4.3.5",
+    "eslint-plugin-prettier": "^4.0.0",
+    "node-fetch": "^3.0.0",
+    "ts-node": "^10.2.1",
+    "tsup": "^4.14.0",
+    "typescript": "^4.4.2",
     "uvu": "^0.5.1"
   },
   "dependencies": {
     "cbor-js": "^0.1.0",
     "crc": "^3.8.0",
-    "erc20-balance": "^0.1.16"
+    "erc20-balance": "^0.1.17"
   },
   "engines": {
     "node": ">=12.4"
